--- a/unexe/templates/usecase/c_uc3.2.html
+++ b/unexe/templates/usecase/c_uc3.2.html
@@ -11,50 +11,14 @@ function uc32Chart(data)
 	//var data = jQuery.parseJSON("{{c_uc32data|escapejs}}");	
 	//alert(data[0]["chart"]);
 	//alert(JSON.stringify(data["chart"]));
-	var w = domutil.getdivwidth("c_uc32chart"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
-	var dim = {"width":w,"height":450}; //width and height of chart container	
-	chartutil.uc32barplot1("#c_uc32chart",dim,data["chart"], data["currency"]);
+	//var w = domutil.getdivwidth("c_uc32chart"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
+	//var w = 400;
+	//var dim = {"width":w,"height":450}; //width and height of chart container	
+
+	// This renders the chart.
+	//chartutil.uc32barplot1("#c_uc32chart",dim,data["chart"], data["currency"]);
 	
-	var values= data["yourdata"]["month"];
-	household = values["sum_units"];
-	occupant  = values["unit_person"];
-	$("#c_uc32month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
 
-	values    = data["yourdata"]["quarter"];
-	household = values["sum_units"];
-	occupant  = values["unit_person"];
-	$("#c_uc32quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
-
-	values    = data["yourdata"]["half"];
-	household = values["sum_units"];
-	occupant  = values["unit_person"];
-	$("#c_uc32half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
-
-	values    = data["yourdata"]["year"];
-	household = values["sum_units"];
-	occupant  = values["unit_person"];
-	$("#c_uc32yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-primary'>Units consumed for household: "+household+" (m<sup>3</sup>), Units consumed per occupant: "+occupant+" (m<sup>3</sup>)</div>");
-
-	//area data
-	values    = data["areadata"]["month"];
-	occupant  = values["occupant"];
-	household = values["avg_units"];	
-	$("#c_uc32Month").html("<strong>Over 1 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");	
-
-	values    = data["areadata"]["quarter"];
-	occupant  = values["occupant"];
-	household = values["avg_units"];	
-	$("#c_uc32Quarter").html("<strong>Over 3 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");
-
-	values    = data["areadata"]["half"];
-	occupant  = values["occupant"];
-	household = values["avg_units"];	
-	$("#c_uc32Half").html("<strong>Over 6 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");
-	
-	values    = data["areadata"]["year"];
-	occupant  = values["occupant"];
-	household = values["avg_units"];	
-	$("#c_uc32Yearly").html("<strong>Over 12 Months Period:</strong><br/><div class='text-muted'>Average consumption per household: "+household+" (m<sup>3</sup>), Average consumption per occupant: "+occupant+" (m<sup>3</sup>)</div>");
 	/*
 	data = jQuery.parseJSON("{{uc32chart2|escapejs}}");
 	w = domutil.getdivwidth("dmachart2"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
@@ -69,7 +33,7 @@ function uc32Chart(data)
 }
 $(window).load(function() {
 	//check for data
-	var data = jQuery.parseJSON("{{c_uc32data|escapejs}}");
+	/*var data = jQuery.parseJSON("{{c_uc32data|escapejs}}");
 	if(data==null)
 		return;	
 	
@@ -105,6 +69,7 @@ $(window).load(function() {
     	domutil.removeCssclass("#c_uc32container","hide");
     	uc32Chart(data);
     }//--end if	 	
+    */
 });
 
 function c_uc32toggle()
@@ -192,8 +157,20 @@ function c_uc32disabled()
 		<label class="radio inline c_uc32period">
 			<input type="radio" name="c_uc32_per" id="c_uc32_per" value="12" onclick="c_uc32toggle();"/> {% trans "Last 12 Months" %}
 		</label>	
-		<button type="button" class="btn btn-primary" onClick="apputil.sendToserver('#c_uc32-form');">{% trans "Compare" %}</button>
-		</form>     
+		<script>
+			function compare_uc32() {
+				//apputil.sendToserver('#c_uc32-form');
+				$("#uc32_compare").load("loaddata_uc_03_2_compare");
+			}
+		</script>
+		<button type="button" class="btn btn-primary" onClick="compare_uc32()">{% trans "Compare" %}</button>
+		<script type="text/javascript">
+			function load_uc32(username) {
+				$("#uc32").load("loaddata_uc_03_2");
+			}
+		</script>
+		<button onclick="load_uc32('{{ request.user.username }}')" class="btn btn-primary" type="button">View Charts</button>		
+		</form>     		
 		</div>
 	 </div>
 	 <br/>
@@ -255,61 +232,15 @@ function c_uc32disabled()
 			 	<div class="bfh-datepicker" data-min="{{stdate}}" data-max="{{endate}}" data-date="{{endate}}" data-name="endate" id="endate" data-format="d-m-y"></div>
 			 </div>
 		-->
-		</div>	 	
+		</div>
 	 </div>
     </div>    
 	<!-- End chart menu/toolbar -->
 
 	<!--  charts and table -->
 	<div class="panel-body" id="panel">
-		<div id="c_uc32cont" class="row hide">
-		<div id="c_uc32title"><p class="bg-primary text-center"><strong></strong></p></div>
-		<div class="col-md-5" id="c_uc32chartcont"></div>
-		<div class="col-md-4" id="c_uc32donutchart"></div>
-		<div class="col-md-3">
-		    <div class="panel panel-primary">
-		        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
-		        <ul class="list-group list-group-flush text-center">
-		            <li id="c_uc32household" class="list-group-item"></li>
-		            <li id="c_uc32occupant" class="list-group-item"></li>
-		        </ul>
-		    </div>
-		    <div class="panel panel-primary">
-		        <div class="panel-heading">{% trans "YOUR SUMMARY" %}</div>
-		        <ul class="list-group list-group-flush text-center">
-		            <li id="c_uc32hhold" class="list-group-item"></li>
-		            <li id="c_uc32occup"  class="list-group-item"></li>
-		            <li class="list-group-item"><a target="_blank" href={% url 'timeseries_detail' tsid %}>{% trans "Open time series page" %}</a></li>
-		        </ul>
-		    </div>		    
-		</div>		
-		</div>
-			
-		<div class="row hide" id="c_uc32container">
-			<div id="c_uc32title"><p class="bg-primary text-center"><strong>Your last 12 Months bill comparison vs other consumers</strong></p></div>	
-			<div class="col-md-7" id="c_uc32chart"></div>
-			<div class="col-md-5" id="c_uc32summary">
-			    <div class="panel panel-primary">
-			        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
-			        <ul class="list-group list-group-flush">
-				        <li class="list-group-item" id="c_uc32Yearly"></li>
-				        <li class="list-group-item" id="c_uc32Half"></li>
-				        <li class="list-group-item" id="c_uc32Quarter"></li>
-				        <li class="list-group-item" id="c_uc32Month"></li>
-			        </ul>
-			    </div>
-			    <div class="panel panel-primary">
-			        <div class="panel-heading">{% trans "YOUR SUMMARY" %}</div>
-			        <ul class="list-group list-group-flush">
-				        <li class="list-group-item" id="c_uc32yearly"></li>
-				        <li class="list-group-item" id="c_uc32half"></li>
-				        <li class="list-group-item" id="c_uc32quarter"></li>
-				        <li class="list-group-item" id="c_uc32month"></li>
-			            <li class="list-group-item text-center"><a target="_blank" href={% url 'timeseries_detail' tsid %}>{% trans "Open time series" %}</a></li>
-			        </ul>
-			    </div>				    				
-			</div>		
-		</div>							
+		<div id="uc32_compare"></div>
+		<div id="uc32"></div>							
 	</div>
 	<!--  End charts and table -->	        
 </div>
