--- a/unexe/templates/usecase/c_uc3.3.html
+++ b/unexe/templates/usecase/c_uc3.3.html
@@ -10,7 +10,7 @@ function uc33Chart(data)
 {
 	//alert(data[0]["chart"]);
 	//alert(JSON.stringify(data["chart"]));
-	var w = domutil.getdivwidth("c_uc33chart"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
+	/*var w = domutil.getdivwidth("c_uc33chart"); //get width of chart div as it changed dynamically due to bootstrap responsive layout
 	var dim = {"width":w,"height":450}; //width and height of chart container	
 	chartutil.uc32barplot1("#c_uc33chart",dim,data["chart"], data["currency"]);
 	
@@ -183,7 +183,19 @@ function c_uc33toggle()
 		<label class="radio inline c_uc33period">
 			<input type="radio" name="c_uc33_per" id="c_uc33_per" value="12" onclick="c_uc33toggle();"/> Last 12 Months
 		</label>	
-		<button type="button" class="btn btn-primary" onClick="apputil.sendToserver('#c_uc33-form');">{% trans "Compare" %}</button>
+		<script>
+			function compare_uc33() {
+				//apputil.sendToserver('#c_uc33-form');
+				$("#uc33_compare").load("loaddata_uc_03_3_compare");
+			}
+		</script>
+		<button type="button" class="btn btn-primary" onClick="compare_uc33();">{% trans "Compare" %}</button>
+		<script type="text/javascript">
+			function load_uc33(username) {
+				$("#uc33").load("loaddata_uc_03_3");
+			}
+		</script>
+		<button onclick="load_uc33('{{ request.user.username }}')" class="btn btn-primary" type="button">View Charts</button>
 		</form>     
 		</div>
 	 </div>
@@ -255,54 +267,8 @@ function c_uc33toggle()
 
 	<!--  charts and table -->
 	<div class="panel-body" id="panel">
-		<div id="c_uc33cont" class="row hide">
-		<div id="c_uc33title"><p class="bg-primary text-center"><strong></strong></p></div>
-		<div class="col-md-5" id="c_uc33chartcont"></div>
-		<div class="col-md-4" id="c_uc33donutchart"></div>
-		<div class="col-md-3">
-		    <div class="panel panel-primary">
-		        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
-		        <ul class="list-group list-group-flush text-center">
-		            <li id="c_uc33household" class="list-group-item"></li>
-		            <li id="c_uc33occupant" class="list-group-item"></li>
-		        </ul>
-		    </div>
-		    <div class="panel panel-primary">
-		        <div class="panel-heading">{% trans "YOUR SUMMARY" %}</div>
-		        <ul class="list-group list-group-flush text-center">
-		            <li id="c_uc33hhold" class="list-group-item"></li>
-		            <li id="c_uc33occup"  class="list-group-item"></li>
-		            <li class="list-group-item"><a target="_blank" href={% url 'timeseries_detail' tsid %}>{% trans "Open time series" %}</a></li>
-		        </ul>
-		    </div>		    
-		</div>		
-		</div>
-			
-		<div class="row hide" id="c_uc33container">
-			<div id="c_uc33title"><p class="bg-primary text-center"><strong>Your last 12 Months bill comparison vs other consumers</strong></p></div>
-			<div class="col-md-7" id="c_uc33chart"></div>
-			<div class="col-md-5" id="c_uc33summary">
-			    <div class="panel panel-primary">
-			        <div class="panel-heading">{% trans "AREA SUMMARY" %}</div>
-			        <ul class="list-group list-group-flush">
-				        <li class="list-group-item" id="c_uc33Yearly"></li>
-				        <li class="list-group-item" id="c_uc33Half"></li>
-				        <li class="list-group-item" id="c_uc33Quarter"></li>
-				        <li class="list-group-item" id="c_uc33Month"></li>
-			        </ul>
-			    </div>
-			    <div class="panel panel-primary">
-			        <div class="panel-heading">{% trans "YOUR SUMMARY" %}</div>
-			        <ul class="list-group list-group-flush">
-				        <li class="list-group-item" id="c_uc33yearly"></li>
-				        <li class="list-group-item" id="c_uc33half"></li>
-				        <li class="list-group-item" id="c_uc33quarter"></li>
-				        <li class="list-group-item" id="c_uc33month"></li>
-			            <li class="list-group-item text-center"><a target="_blank" href={% url 'timeseries_detail' tsid %}>{% trans "Open time series" %}</a></li>
-			        </ul>
-			    </div>				    				
-			</div>		
-		</div>							
+		<div id="uc33_compare"></div>			
+		<div id="uc33"></div>							
 	</div>
 	<!--  End charts and table -->	        
 </div>
