--- a/uc_03_6/templates/events_table.html
+++ b/uc_03_6/templates/events_table.html
@@ -21,7 +21,7 @@
             {% if event.notification == "burst" %}
                 <td style="font-weight: normal">{% trans "Possible burst!" %}</td>
             {% endif %}
-            <td style="font-weight: normal"><a href="javascript:void(0);" onclick="hideEventAndReload('{{ event.id }}');">{% trans "Hide" %}</a></td>
+            <td style="font-weight: normal"><a href="javascript:void(0);" onclick="hideEventAndReload('{{ event.id }}', '{{ request.user.username }}');">{% trans "Hide" %}</a></td>
         </tr>
     {% empty %}
         <td colspan="4"><p class="text-center" style="color: #555; font-style: italic">{% trans "No events to report, at the moment." %}</p></td>
