--- a/uc_01_2/templates/uc_01_2_index.html
+++ b/uc_01_2/templates/uc_01_2_index.html
@@ -39,7 +39,11 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <select id="c_uc12year" class="form-control" required="true"></select>
+                        <select id="c_uc12year" class="form-control" required="true">
+                        {% for yr in yearlist %}
+                            <option value="{{ yr }}">{{ yr }}</option>
+                        {% endfor %}
+                        </select>
                     </div>
                     <button onclick="fetchChart_uc12('{{ request.user.username }}')" class="btn btn-primary" type="button">{% trans " Submit " %}</button>
                 </div>
