--- a/core/templates/user_profile.html
+++ b/core/templates/user_profile.html
@@ -26,11 +26,11 @@
                     <input type="hidden" name="t" value="{{ user_id }}">
                     <div class="form-group" style="margin-top: 40px">
                         <label class="col-md-4 control-label">{% trans "First Name" %}: </label>
-                        <div class="col-md-6"><input class="form-control" placeholder="{% trans 'First name' %}..." name="first" id="first" type="text" value="{{ first }}" required="true"></div>
+                        <div class="col-md-6"><input class="form-control" placeholder="{% trans 'First Name' %}..." name="first" id="first" type="text" value="{{ first }}" required="true"></div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-4 control-label">{% trans "Last Name" %}: </label>
-                        <div class="col-md-6"><input class="form-control" placeholder="{% trans 'Last name' %}..." name="last" id="last" type="text" value="{{ last }}" required="true"></div>
+                        <div class="col-md-6"><input class="form-control" placeholder="{% trans 'Last Name' %}..." name="last" id="last" type="text" value="{{ last }}" required="true"></div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-4 control-label">{% trans "Email" %}: </label>
