--- a/uc_03_1/templates/uc_03_1_index.html
+++ b/uc_03_1/templates/uc_03_1_index.html
@@ -182,11 +182,11 @@
         </div>
         <div class="row">
             <div class="col-md-12 my_cal" id="calendar1">
-                <div class="form-group">
+                <div class="form-inline col-md-3">
                     {% trans "Select Day" %}:
                     <div class="bfh-datepicker" data-time="now" data-name="date" id="from1" data-format="y-m-d"></div>
                 </div>
-                <div class="form-group">
+                <div class="form-inline col-md-3">
                     {% trans "Select 2nd Day" %}:
                     <div class="bfh-datepicker" data-time="now" data-name="date" id="to1" data-format="y-m-d"></div>
                 </div>
@@ -194,11 +194,11 @@
         </div>
         <div class="row">
             <div class="col-md-12 my_cal" id="calendar2">
-                <div class="form-group">
+                <div class="form-inline col-md-3">
                     {% trans "Select Day" %}:
                     <div class="bfh-datepicker" data-time="now" data-name="date" id="from2" data-format="y-m-d"></div>
                 </div>
-                <div class="form-group">
+                <div class="form-inline col-md-3">
                     {% trans "Select 2nd Day" %}:
                     <div class="bfh-datepicker" data-time="now" data-name="date" id="to2" data-format="y-m-d"></div>
                 </div>
