--- a/uc_03_6/templates/events_table.html
+++ b/uc_03_6/templates/events_table.html
@@ -1,5 +1,6 @@
 {% load sekizai_tags %}
 {% load i18n %}
+{% load uc3_6tags %}
 
 <table class="table table-condensed table-striped table-hover">
     <thead class="">
@@ -14,7 +15,7 @@
     {% for event in events %}
         <tr>
             <td><i class="glyphicon glyphicon-exclamation-sign" style="color: #d62728;"></i></td>
-            <td style="font-weight: normal">{{ event.detected|date:"d M, Y" }}</td>
+            <td style="font-weight: normal">{{ event.detected|yesterday|date:"d M, Y" }}</td>
             {% if event.notification == "leakage" %}
                 <td style="font-weight: normal; color: #d62728">{% trans "Possible leakage!" %}</td>
             {% endif %}
