modified burst algorithm for UC3.6

--- a/uc_03_6/templates/fault_history.html
+++ b/uc_03_6/templates/fault_history.html
@@ -19,7 +19,7 @@
                         <thead class="bg-primary">
                         <tr>
                             <th>{% trans "Date detected" %}</th>
-                            <th>{% trans "Time of event" %}</th>
+                            <th>{% trans "Date of event" %}</th>
                             <th>{% trans "Event Type" %}</th>
                             <th>{% trans "Fault Consumption" %} ({% trans "litres" %})</th>
                         </tr>
@@ -27,7 +27,7 @@
                         <tbody>
                         {% for event in events %}
                             <tr>
-                                <td>{{ event.detected|yesterday|date:"d M y" }}</td>
+                                <td>{{ event.detected|date:"d M y" }}</td>
                                 <td>
                                     {% if event.notification == "burst" %}
                                         {{ event.event_time }}
